[project]
name = "napstir"
version = "1.0.0"
description = "STOP ALL THE DOWNLOADING"
requires-python = ">=3.12"
dependencies = [
    "click==8.2.0",
    "tomlkit==0.13.3",
    "yt-dl-turkoid-plugin",
    "yt-dlp[default]>=2025.11.12",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "ruff>=0.11.10",
]

[tool.uv.sources]
yt-dl-turkoid-plugin = { git = "https://github.com/turkoid/yt-dl-turkoid-plugin"}
